--- a/hello.html
+++ b/hello.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>git</title>
 </head>
 <body>
-	hello world
+	hello world! whats up
 </body>
 </html>
